navbar component + ajustement profil

--- a/pfirst/src/app/app.component.html
+++ b/pfirst/src/app/app.component.html
@@ -1,5 +1,8 @@
 <body>
-  <div id="main">
-   <router-outlet></router-outlet>
-  </div>
+<div>
+  <app-global-navbar></app-global-navbar>
+</div>
+<div id="main">
+  <router-outlet></router-outlet>
+</div>
 </body>
