--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -1,18 +1,42 @@
 <div id="profilMain">
-  <div id="myProfilEssentials">
-    <p class="user_identifier">
-      <img src="../../assets/data/pdp-test.jpg" id="myProfilPic">
-      Gilbert ANGENIEUX
-    </p>
-  </div>
-  <div id="aPropos" style="width:100%">
-    <h3>À propos</h3>
-    <p>{{bio}}</p>
-  </div>
-  <h4 id="nivTitle">Progression</h4>
-  <app-niveau></app-niveau>
-  <app-services-experience></app-services-experience>
-  <button class="btn btn-success" (click)="onSave()">Enregistrer</button>
-  <button class="btn btn-success" (click)="onLoad()">Charger</button>
+
+  <table cellpadding="50">
+    <tr>
+      <table cellpadding="50">
+
+        <tr>
+          <td>
+          <div id="myProfilEssentials">
+            <p class="user_identifier">
+              <img src="../../assets/data/pdp-test.jpg" id="myProfilPic">
+              Gilbert ANGENIEUX
+            </p>
+          </div>
+          </td>
+
+
+        <td>
+          <div id="aPropos" style="width:100%">
+            <h3>À propos</h3>
+            <p>{{bio}}</p>
+          </div>
+        </td>
+        </tr>
+      </table>
+    </tr>
+    <tr>
+      <table>
+        <tr>
+          <td>
+            <h4 id="nivTitle">Progression</h4>
+            <app-niveau></app-niveau>
+          </td>
+          <td>
+            <app-services-experience></app-services-experience>
+          </td>
+        </tr>
+      </table>
+    </tr>
+  </table>
 
 </div>
