écriture en base de donnée : ok

--- a/pfirst/src/app/auth/auth.component.html
+++ b/pfirst/src/app/auth/auth.component.html
@@ -9,7 +9,7 @@
         <label for="who">
           Adresse mail
         </label>
-        <input type="text" id="who" class="form-control" name="who" placeholder="name@example.com" ngModel>
+        <input type="text" id="who" class="form-control" name="mail" placeholder="name@example.com" ngModel>
       </td>
     </tr>
     <tr>
