debut de piste current route, leger reformatage de profil

--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -5,5 +5,4 @@
   <!--<input type="image" src="../../assets/data/fleche_up.png" (click)="unsetComment()" [disabled]="!showComment" *ngIf="showComment" class="flecheUp" alt=""buttonSetComment></!-->
 </div>
 <p *ngIf="showComment">{{getDescript()[2]}}<br></p>
-<input type="image" src="../../assets/data/fleche_up.png" (click)="unsetComment()" [disabled]="!showComment" *ngIf="showComment" class="flecheUp" alt=""buttonSetComment>
-
+<input type="image" src="../../assets/data/fleche_up.png" (click)="unsetComment()" [disabled]="!showComment" *ngIf="showComment" class="flecheUp" alt="buttonSetComment">
