--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -5,6 +5,9 @@
     <td>
       <button routerLink="profil" class="btn btn-outline-light" type="button">Profil</button>
     </td>
+    <td>
+      <p style="color:white">route : {{path}} ; hasUrl : <span *ngIf="hasUrl">true</span> </p>
+    </td>
   </table>
   <table align="right" id="buttons_connection" cellpadding="5">
     <tr>
