--- a/pfirst/src/app/profil/profil.component.css
+++ b/pfirst/src/app/profil/profil.component.css
@@ -1,21 +1,19 @@
 #myProfilEssentials
 {
+  height: 100%;
   margin-left: 3%;
   text-align: top left;
 }
 
 #myProfilPic
 {
-  width: 150px;
+  height: 300px;
   border: 5px #8f2812 solid;
 }
 
 .user_identifier
 {
   font-size: 30px;
-  line-height: 300px;
-  background-color:white;
-  text-align: top right;
 }
 
 #aPropos
@@ -31,5 +29,11 @@ app-services-experience
 #nivTitle
 {
   text-align: center;
+}
+
+#profilHead
+{
+  border: solid white 10px;
+  width:100%;
 }
 
