--- a/pfirst/src/app/inscription/inscription.component.css
+++ b/pfirst/src/app/inscription/inscription.component.css
@@ -2,3 +2,20 @@
   width: 150px;
 }
 
+#info
+{
+  width: 25px;
+  height: 25px;
+}
+
+#text_info
+{
+  font-size: 20px;
+  font-weight: lighter;
+  font-family: -apple-system;
+}
+
+#info_mdp
+{
+  color: dimgray;
+}
