--- a/pfirst/src/app/demande/demande.component.css
+++ b/pfirst/src/app/demande/demande.component.css
@@ -1,3 +1,47 @@
 #logo{
   width: 150px;
 }
+#menage{
+  position: absolute;
+  left: 450px;
+  background-color: red;
+  height: 500px;
+  width: 1000px;
+}
+
+#accompagner{
+  position: absolute;
+  left: 450px;
+  background-color: yellow;
+  height: 500px;
+  width: 1000px;
+}
+
+#cuisine{
+  position: absolute;
+  left: 450px;
+  background-color: darkgreen;
+  height: 500px;
+  width: 1000px;
+}
+
+#accompagner_logo{
+  width: 130px;
+}
+#cuisine_logo{
+  width: 130px;
+}
+#menage_logo{
+  width: 130px;
+}
+
+#menage_logo1{
+  width: 90px;
+}
+
+#accompagner_logo1{
+  width: 90px;
+}
+#cuisine_logo1{
+  width: 90px;
+}
