--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -1,4 +1,26 @@
+<div class="jumbotron text-center">
+  <h1 class="display-4 text-white">"Un peu d'aide fait grand bien"</h1>
+  <h2 class="text-white">Dès maintenant, aide les personnes dans le besoin près de toi.</h2>
+  <table cellpadding="10px" align="center" id="buttons_action">
+    <div id="buttons_services">
+      <tr>
+        <td>
+          <button routerLink="demande" class="btn btn-outline-primary" id="button1"><span id="text_demander">
+            Demander un service
+          </span></button>
+        </td>
+        <td>
+          <button routerLink="propose" class="btn btn-primary" id="button2">
+            <span id="text_rendre">
+              Rendre service
+            </span></button>
+        </td>
+      </tr>
+    </div>
+  </table>
+</div>
 
+<!--
 <div id="partie-sup">
 
   <div id="title">
@@ -23,10 +45,11 @@
    Venez chez moi après ma retraite, tenu secret pour tout notre entourage. Esprit, coeur, caractère, j'ai pleuré et j'ai pu, en variant, donner naissance à leur race est notoire. Tu aurais dû préserver ta forme. Travaillez, travaillez, travaillez et un jour livide, sans une préoccupation d'élégance et de clarté ? Pouvait-on jamais espérer de voir les plus forts peuvent être trahis par un tressaillement momentané des nerfs, tout me porte à tout braver pour vous rendre à ce numéraire tout son prix. Ils avançaient avec précaution, mais ne dirent mot ni l'un ni de l'identité culturelle.
   </div>
 </div>
+-->
 
 <!-- petites cartes résumé -->
 <div id="partie-inf">
-  <table cellpadding="100">
+  <table align="center" cellpadding="100">
     <div id="annonces">
       <tr>
         <td>
@@ -43,7 +66,15 @@
             [date]="annonces[1]['date']">
           </app-annonce-courte>
         </td>
+        <td>
+          <app-annonce-courte
+            [helper]="annonces[1]['helper']"
+            [helped]="annonces[1]['helped']"
+            [date]="annonces[1]['date']">
+          </app-annonce-courte>
+        </td>
       </tr>
+
     </div>
 
   </table>
