changement des logos demande service

--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -5,24 +5,24 @@
   <tr>
     <td><img *ngIf="menage" style="cursor:pointer" id="menage_logo" src="../assets/data/menage.png" alt=""
              (click)="menage=true;accompagner=false;cuisine=false;">
-      <img *ngIf="!menage" style="cursor:pointer" id="menage_logo1" src="../assets/data/menage.png" alt=""
+      <img *ngIf="!menage" style="cursor:pointer" id="menage_logo1" src="../assets/data/menage1.png" alt=""
            (click)="menage=true;accompagner=false;cuisine=false;">
     </td>
     <td><img *ngIf="cuisine" style="cursor:pointer" id="cuisine_logo" src="../assets/data/cuisine.png" alt=""
              (click)="menage=false;accompagner=false;cuisine=true;">
-      <img *ngIf="!cuisine" style="cursor:pointer" id="cuisine_logo1" src="../assets/data/cuisine.png" alt=""
+      <img *ngIf="!cuisine" style="cursor:pointer" id="cuisine_logo1" src="../assets/data/cuisine1.png" alt=""
            (click)="menage=false;accompagner=false;cuisine=true;">
     </td>
     <td><img *ngIf="accompagner" style="cursor:pointer" id="accompagner_logo" src="../assets/data/accompagner.png" alt=""
              (click)="menage=false;accompagner=true;cuisine=false;">
-      <img *ngIf="!accompagner" style="cursor:pointer" id="accompagner_logo1" src="../assets/data/accompagner.png" alt=""
+      <img *ngIf="!accompagner" style="cursor:pointer" id="accompagner_logo1" src="../assets/data/accompagner1.png" alt=""
            (click)="menage=false;accompagner=true;cuisine=false;">
     </td>
   </tr>
 </table>
 
 <div *ngIf="menage" id="menage">
-  <h2 style="color: #f7f7f7;">Tâches ménagères</h2>
+
 </div>
 
 <div *ngIf="cuisine" id="cuisine">
