--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -20,32 +20,6 @@
   </table>
 </div>
 
-<!--
-<div id="partie-sup">
-
-  <div id="title">
-    <p>"UN PEU D'AIDE FAIT GRAND BIEN"</p>
-  </div>
-
-  <table cellpadding="10px" align="center" id="buttons_action">
-   <div id="buttons_services">
-     <tr>
-        <td>
-         <button routerLink="demande" class="btn btn-outline-primary" id="button1">Demander un service</button>
-        </td>
-        <td>
-         <button routerLink="propose" class="btn btn-primary" id="button2">Rendre service</button>
-       </td>
-      </tr>
-    </div>
-  </table>
-
-
-  <div id="description">
-   Venez chez moi après ma retraite, tenu secret pour tout notre entourage. Esprit, coeur, caractère, j'ai pleuré et j'ai pu, en variant, donner naissance à leur race est notoire. Tu aurais dû préserver ta forme. Travaillez, travaillez, travaillez et un jour livide, sans une préoccupation d'élégance et de clarté ? Pouvait-on jamais espérer de voir les plus forts peuvent être trahis par un tressaillement momentané des nerfs, tout me porte à tout braver pour vous rendre à ce numéraire tout son prix. Ils avançaient avec précaution, mais ne dirent mot ni l'un ni de l'identité culturelle.
-  </div>
-</div>
--->
 
 <!-- petites cartes résumé -->
 <div id="partie-inf">
@@ -56,21 +30,24 @@
           <app-annonce-courte
             [helper]="annonces[0]['helper']"
             [helped]="annonces[0]['helped']"
-            [date]="annonces[0]['date']">
+            [date]="annonces[0]['date']"
+            [service]="annonces[0]['service']">
           </app-annonce-courte>
         </td>
         <td>
           <app-annonce-courte
             [helper]="annonces[1]['helper']"
             [helped]="annonces[1]['helped']"
-            [date]="annonces[1]['date']">
+            [date]="annonces[1]['date']"
+            [service]="annonces[1]['service']">
           </app-annonce-courte>
         </td>
         <td>
           <app-annonce-courte
-            [helper]="annonces[1]['helper']"
-            [helped]="annonces[1]['helped']"
-            [date]="annonces[1]['date']">
+            [helper]="annonces[2]['helper']"
+            [helped]="annonces[2]['helped']"
+            [date]="annonces[2]['date']"
+            [service]="annonces[2]['service']">
           </app-annonce-courte>
         </td>
       </tr>
@@ -79,5 +56,7 @@
 
   </table>
 </div>
+
+<div id="space"></div>
 
 
