--- a/pfirst/src/app/footer/footer.component.html
+++ b/pfirst/src/app/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div id="footer" class="footer-copyright text-center text-white py-3">© 2020 Copyright:
+    <a href="https://www.insa-lyon.fr"> INeed</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
