zoom sur les petits annonces

--- a/pfirst/src/app/annonce-courte/annonce-courte.component.html
+++ b/pfirst/src/app/annonce-courte/annonce-courte.component.html
@@ -1,8 +1,15 @@
-<div class="card" style="width: 18rem;">
-  <img src="{{image}}" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{helper}} a aidé {{helped}}</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. {{date}}</p>
-    <a href="#" class="btn btn-primary">Voir l'annonce</a>
+<div class="zoom">
+  <div class="annonce_courte">
+    <div class="card">
+      <img src="{{image}}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{helper}} a aidé {{helped}}</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. {{date}}</p>
+        <a href="#" class="btn btn-primary">Voir l'annonce</a>
+      </div>
+    </div>
   </div>
 </div>
+
+
+
