--- a/pfirst/src/app/app.component.html
+++ b/pfirst/src/app/app.component.html
@@ -7,4 +7,9 @@
 </div>
 </body>
 
-<app-footer></app-footer>
+<div id="space"></div>
+
+<footer>
+  <app-footer id="footer"></app-footer>
+</footer>
+
