--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -5,12 +5,12 @@
     <div id="buttons_services">
       <tr>
         <td>
-          <button routerLink="demande" class="btn btn-outline-primary" id="button1"><span id="text_demander">
+          <button routerLink="demande" class="btn btn-outline-success" id="button1"><span id="text_demander">
             Demander un service
           </span></button>
         </td>
         <td>
-          <button routerLink="propose" class="btn btn-primary" id="button2">
+          <button routerLink="propose" class="btn btn-success" id="button2">
             <span id="text_rendre">
               Rendre service
             </span></button>
@@ -43,12 +43,12 @@
           </app-annonce-courte>
         </td>
         <td>
-          <app-annonce-courte
-            [helper]="annonces[2]['helper']"
-            [helped]="annonces[2]['helped']"
-            [date]="annonces[2]['date']"
-            [service]="annonces[2]['service']">
-          </app-annonce-courte>
+              <app-annonce-courte
+                [helper]="annonces[2]['helper']"
+                [helped]="annonces[2]['helped']"
+                [date]="annonces[2]['date']"
+                [service]="annonces[2]['service']">
+              </app-annonce-courte>
         </td>
       </tr>
 
@@ -57,6 +57,6 @@
   </table>
 </div>
 
-<div id="space"></div>
+
 
 
