--- a/pfirst/src/app/demande/demande.component.css
+++ b/pfirst/src/app/demande/demande.component.css
@@ -2,23 +2,31 @@
   width: 150px;
 }
 
-#accompagner_logo{
-  width: 130px;
-}
-#cuisine_logo{
-  width: 130px;
-}
-#menage_logo{
+#accompagner_logo,#cuisine_logo,#menage_logo,#accompagner_logo1,#cuisine_logo1,#menage_logo1{
   width: 130px;
 }
 
-#menage_logo1{
-  width: 90px;
+.zoom {
+  width: 160px;
+  height: 110px;
 }
-
-#accompagner_logo1{
-  width: 90px;
+.icone {
+  width: 100%;
+  height: 100%;
 }
-#cuisine_logo1{
-  width: 90px;
+.icone  {
+  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
+}
+.icone:hover  {
+  /* L'image est grossie de 25% */
+  -webkit-transform:scale(1.25); /* Safari et Chrome */
+  -moz-transform:scale(1.25); /* Firefox */
+  -ms-transform:scale(1.25); /* Internet Explorer 9 */
+  -o-transform:scale(1.25); /* Opera */
+  transform:scale(1.25);
 }
