--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -4,8 +4,29 @@
       <td>
         <img src="../assets/data/logo2.png" alt="ineed" id="logo" routerLink="" style="cursor:pointer">
       </td>
+        <!--
+        <button routerLink="profil" class="btn btn-outline-light" type="menu" *ngIf="this.authService.isAuthenticated()" aria-haspopup="true" aria-expanded="true">
+          Profil
+        </button>
+        -->
       <td>
-        <button routerLink="profil" class="btn btn-outline-light" type="button">Profil</button>
+        <button (click)="this.switchMenu()">
+          Profil
+        </button>
+        <ul *ngIf="this.showProfilMenu">
+          <li>Mes infos</li>
+          <li>Mes notifs</li>
+        </ul>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            {{this.userService.getInitials()}}
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" routerLink="profil">Mon profil</a>
+            <a class="dropdown-item" routerLink="mes-infos">Modifier mes infos</a>
+            <a class="dropdown-item" routerLink="notifications">Mes notifications</a>
+          </div>
+        </div>
       </td>
       <td>
         <p style="color:white">route : {{path}} ; hasUrl : <span *ngIf="hasUrl">true</span> </p>
