avancement TP 4h Gabriel

--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -62,11 +62,8 @@
 
 </div>
 
-<div *ngIf="accompagner" id="accompagner">
-
-</div>
-
-<div *ngIf="course" id="course">
+<div *ngIf="courses" id="courses">
+  <app-new-courses></app-new-courses>
 
 </div>
 
