commit de fin de séance

--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -62,8 +62,7 @@
 
 </div>
 
-<div *ngIf="courses" id="courses">
-  <app-new-courses></app-new-courses>
+<div *ngIf="course" id="courses">
 
 </div>
 
