--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-8 col-sm-offset-2">
-    <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
+    <form [formGroup]="coursesForm" (ngSubmit)="onSubmitForm()">
         <h2>Vous avez choisis de demander a quelqu'un de vous aider a faire les courses avec vous </h2>
 
         <div class="form-group">
